metadata title logo page

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,7 +10,7 @@
   "background_color": "#ffffff",
   "icons": [
     {
-      "src": "preview.jpeg",
+      "src": "72.png",
       "sizes": "72x72",
       "type": "image/png"
     },
